--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -29,7 +29,7 @@ server {
         add_header Cache-Control "public, no transform";
     }
 
-    access_log /var/www/access.log magnus;
+    access_log /var/www/logs/access.log magnus;
 
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
